--- a/index.html
+++ b/index.html
@@ -80,17 +80,17 @@
     <div class="w-full max-w-4xl mx-auto bg-white rounded-2xl shadow-lg p-6 md:p-10 space-y-8">
         <!-- Header -->
         <div class="text-center">
-            <h1 class="text-3xl md:text-4xl font-bold text-gray-900">Instagram Non-Follower Detector</h1>
+            <h1 class="text-3xl md:text-4xl font-bold text-gray-900">Instagram Non-Follow Back Detector</h1>
             <p class="mt-2 text-gray-600">Find out who you follow that doesn't follow you back.</p>
             <div class="mt-4">
-                <button id="instructionsBtn" class="text-indigo-600 hover:text-indigo-800 font-semibold text-sm">How to Download Your Data?</button>
+                <button id="instructionsBtn" class="text-indigo-600 hover:text-indigo-800 font-semibold text-sm">How to download your Followers & Following Lists?</button>
             </div>
         </div>
 
         <div id="uploadSection" class="space-y-8">
              <!-- Data Upload Section -->
             <div class="space-y-4">
-                <h3 class="text-lg font-semibold text-gray-700 text-center">1. Upload Your Data</h3>
+                <h3 class="text-lg font-semibold text-gray-700 text-center">1. Upload Your Followers & Following Lists</h3>
                 <p class="text-sm text-gray-500 text-center">Your data is processed in your browser and is never uploaded to a server.</p>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-6 pt-4">
                     <!-- Option A: ZIP Upload -->
@@ -172,14 +172,30 @@
         </div>
         
         <!-- Footer with Creator Credits -->
-        <footer class="text-center text-xs text-gray-500 pt-6 border-t border-gray-200 space-y-2">
-            <p>
-                Created by
-                <a href="https://www.instagram.com/dadabrowski/" target="_blank" class="font-medium text-indigo-600 hover:underline">dadabrowski</a>.
-                View the code on
-                <a href="https://github.com/damiad/instagram-no-follow-back" target="_blank" class="font-medium text-indigo-600 hover:underline">GitHub</a>.
-            </p>
-            <p>Feel free to reach out with feedback, feature requests, or contributions!</p>
+        <footer class="text-center text-xs text-gray-500 pt-6 border-t border-gray-200 space-y-4">
+            <div>
+                <h4 class="font-semibold text-sm text-gray-600 mb-2">Did you find this tool useful?</h4>
+                <p class="mb-3 text-xs text-gray-500">This tool is free to use. Your support is warmly appreciated and makes this all possible!</p>
+                <div class="flex justify-center items-center space-x-4">
+                    <a href="https://buymeacoffee.com/damiad" target="_blank" class="inline-flex items-center justify-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-red-500 hover:bg-red-600 transition-colors">
+                        <img src="https://storage.ko-fi.com/cdn/cup-border.png" alt="Ko-fi logo" class="w-5 h-5 mr-2"/>
+                        Buy me a coffee
+                    </a>
+                     <a href="https://paypal.me/damiand18" target="_blank" class="inline-flex items-center justify-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 transition-colors">
+                        <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 24 24"><path d="M8.32 21.18c.24.22.53.33.88.33h5.92c3.53 0 6.26-2.5 6.26-6.15 0-2.22-1.2-4.22-3.08-5.32-.2-.11-.46-.11-.66 0-.2.11-.33.32-.28.55.07.33.1.66.1.98 0 2.22-1.63 3.9-3.72 3.9H9.3c-.3 0-.58-.1-.78-.3-.2-.18-.32-.43-.28-.68l1.3-8.82c.04-.26.2-.5.44-.64l.01-.01c.24-.14.54-.14.78 0h.02l.4.2c.28.14.47.4.52.7l.28 1.58c.08.43.46.73.9.73h.3c.53 0 .96-.42 1.05-.94l.4-2.2c.1-.56-.22-1.1-.76-1.3l-.33-.13c-.3-.13-.64-.13-.94 0l-5.9 2.92c-.36.18-.58.53-.58.92L6.2 14.8c-.02.16 0 .33.05.48l.26.88c.1.35.08.73-.06 1.06l-.7 1.63c-.15.35-.14.73.04 1.08l.01.02z"></path></svg>
+                        PayPal
+                    </a>
+                </div>
+            </div>
+             <div class="pt-4 border-t border-gray-100">
+                <p>
+                    Created by
+                    <a href="https://www.instagram.com/dadabrowski/" target="_blank" class="font-medium text-indigo-600 hover:underline">dadabrowski</a>.
+                    View the code on
+                    <a href="https://github.com/damiad/instagram-no-follow-back" target="_blank" class="font-medium text-indigo-600 hover:underline">GitHub</a>.
+                </p>
+                <p class="mt-2">Feel free to reach out with feedback, feature requests, or contributions!</p>
+            </div>
         </footer>
     </div>
     
